mdapi/objects/NFRCallout__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EncodedAuth_Test__c</fullName>
        <defaultValue>&quot;Basic U1RDV2Vic3RvcmVXU0FjY2Vzczp2azM0MjMja2NrLiwq&quot;</defaultValue>
        <label>EncodedAuth_Test</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EncodedAuth__c</fullName>
        <label>EncodedAuth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_Test__c</fullName>
        <defaultValue>&quot;https://msp.storagecraft.com:443/STCWebServicesTest/STCSerialNumberManagementWS&quot;</defaultValue>
        <label>Endpoint_Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <label>Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassPhrase__c</fullName>
        <label>PassPhrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_Test__c</fullName>
        <defaultValue>&quot;vk3423#kck.,*TEST&quot;</defaultValue>
        <label>Password_Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_Endpoint_Test__c</fullName>
        <defaultValue>&quot;https://msp.storagecraft.com:443/STCWebServicesTest/STCSerialNumberWS?wsdl&quot;</defaultValue>
        <label>SN_Endpoint_Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_Endpoint__c</fullName>
        <label>SN Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_Test__c</fullName>
        <defaultValue>&quot;STCWebstoreWSAccessTEST&quot;</defaultValue>
        <label>Username_Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NFR Key Callout</label>
</CustomObject>